[package]
name = "twitch-curses"
version = "0.1.0"
edition = "2021"
default-run = "twitch-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "twitch-tui"
path = "src/main.rs"

[[bin]]
name = "online-check"
path = "src/online-check.rs"

[dependencies]
# TUI library (my fork)
ratatui = { git = "https://github.com/bolshoytoster/ratatui" }
# ratatui backend
crossterm = "*"
# {,De}serialization
serde = { version = "*", features = ["derive"] }
# JSON (faster than the serde one)
simd-json = "*"
# HTTPS
curl = "*"
# Date formatting
chrono = "*"

# Chat
irc = { version = "*", optional = true }
# Line wrapping, since ratatui doesn't expose it's internal one
textwrap = { version = "*", optional = true }
# Async
tokio = { version = "*", features = ["full", "time"], optional = true }
futures = { version = "*", optional = true }
# Websockets
tokio-tungstenite = { version = "*", features = ["native-tls"], optional = true }

[features]
default = ["chat"]
# These are only needed for chat
chat = ["irc", "crossterm/event-stream", "textwrap", "tokio", "futures", "tokio-tungstenite"]
